--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,16 @@
   "repository": "https://github.com/h4rr21/devF_batch3",
   "author": "h4rry",
   "license": "MIT",
+  "scripts": {
+    "start": "sequelize db:migrate && node app.js"},
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "global": "^4.3.2",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.37.10"
+    "sequelize": "^4.37.10",
+    "sequelize-cli": "^3.0.0",
+    "cors": "^2.8.4"
   }
 }
